--- a/index.html
+++ b/index.html
@@ -1,1 +1,195 @@
-Halo
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width-device-width, initial-scale=1.0">
+		<meta http-equiv="X-UA-compatible" content="ie=edge">
+		<!-- Start Title -->
+		<title>Jual Bed Massage Portable - Bed Massage Lipat</title>
+		<meta type="description" content="Bed Massage Portable Praktis dan Kokoh">
+		<!-- End Title -->
+
+		<!-- Start Description -->
+		<meta name="description" content=" Bed Massage Portable Praktis dan Kokoh.Bed Massage Lipat. Cocok untuk home massage dan home terapis.">
+		<!-- End Description -->
+
+		<!-- Start CSS -->
+		<link rel="stylesheet" href="styles/style.css">
+		<!-- End CSS -->
+
+	</head>
+	<body>
+		<!-- Start Logo -->
+		<div class="container bg-blue logo">
+			<a href="index.html" title="Bed Massage Portable">
+				<img src="image/Logo bed massage2.jpg" alt="logo bed massage" width="150">
+			</a>
+		</div>	
+		<!-- End Logo -->
+
+		<!-- Start Menu Primer -->
+		<div class="container bg-red menu-primer">
+			<ul>
+				<li>
+					<a href="index.html" title="Beranda" class="active">Beranda</a>
+				</li>	
+				<li>
+					<a href="tentang.html" title="Tentang Kami">Tentang Kami</a>
+				</li>
+				<li>
+					<a href="produk.html" title="Produk">Produk</a>
+				</li>
+				<li>
+					<a href="artikel.html" title="Artikel">Artikel</a>
+				</li>
+				<li>
+					<a href="pemesanan.html" title="Cara Pemesanan">Cara Pemesanan</a>
+				</li>
+				<li>
+					<a href="pertanyaan.html" title="Pertanyaan">Pertanyaan</a>
+				</li>
+				<li>
+					<a href="kontak.html" title="Kontak Kami">Kontak Kami</a>
+				</li>
+			</ul>
+		</div>
+		<!-- End Menu Primer -->
+
+		<!-- Start Jumbotron -->
+		<div class="container jumbotron">
+			<h1>Selamat Datang di Sigma Bed Massage</h1>
+			<h3>Bed Massage Portable Praktis dan Kokoh</h3>
+		</div>
+		<!-- End Jumbotron -->
+
+		<!-- Start Promo dan Layanan -->
+		<div class="container">
+			<!-- Start Promo -->
+			<div class="main-home-one">
+				<div class="box-heading">
+					<h4>Promo</h4>
+				</div>
+				<div class="box-isi">
+					<ul>
+						<li> [Bulan ini] Dapatkan Harga Spesial Bagi Reseller</li>
+					</ul>
+				</div>
+			</div>
+			<!-- End Promo -->
+
+			<!-- Start Layanan -->
+			<div class="main-home-two">
+				<div class="box-heading">
+					<h4>Layanan</h4>
+				</div>
+				<div class="box-isi">
+					<ul>
+						<li>Free Delivery untuk Kota Denpasar, Kab Badung dan Kab Gianyar (Ubud)</li>
+					</ul>
+				</div>
+			</div>
+			<!-- End Layanan -->
+		</div>
+		<!-- End Promo dan Layanan -->
+
+		<!-- Start Artikel dan Testimoni -->
+		<div class="container">
+			<!-- Start Artikel -->
+			<div class="main-home-one">
+				<div class="box-heading">
+					<h4>Artikel</h4>
+				</div>
+				<div class="box-isi">
+					<ol>
+						<li>
+							<a href="" title="Manfaat Pijat bagi Kesehatan">Manfaat Pijat bagi Kesehatan</a>
+						</li>
+						<li>
+							<a href="" title="Manfaat Kerokan">Manfaat Kerokan</a>
+						</li>
+					</ol>
+				</div>
+			</div>
+			<!-- End Artikel -->
+
+			<!-- Start Testimonial -->
+			<div class="main-home-two">
+				<div class="box-heading">
+					<h4>Testimonial</h4>
+				</div>
+				<div class="box-isi">
+					<blockquote>
+						<p>
+							<em> Just to let you know I LOVE my massage table and it is used EVERYDAY. Thank you for making a good,solid and strong product!!!</em>
+						</p>
+						<cite>--Alberto</cite>
+					</blockquote>
+				</div>
+			</div>
+			<!-- End Testimonial -->
+		</div>
+		<!-- End Artikel dan Testimoni -->
+		
+		<!-- Start Menu Sekunder -->
+		<div class="container-full bg-blue">
+			<div class="container bg-red">
+				<!-- Start Sigma Bed Massage -->
+				<h4>Sigma Bed Massage</h4>
+				<p>Bed Massage Portable Praktis dan Kokoh</p>
+				<p>Email :<a href="mailto:arijani67@gmail.com" title="arijani67@gmail.com">arijani67@gmail.com</a></p>
+				<p>WA :<a href="+62 812 394 9617" title="+62 812 394 9617">+62 812 394 9617</a></p>
+				<!-- End Sigma Bed Massage -->
+
+				<!-- Start Menu -->
+				<h4>Menu</h4>
+				<ul>
+					<li>
+						<a href="index.html" title="Beranda">Beranda</a>
+					</li>	
+					<li>
+						<a href="tentang.html" title="Tentang Kami">Tentang Kami</a>
+					</li>
+					<li>
+						<a href="produk.html" title="Produk">Produk</a>
+					</li>
+					<li>
+						<a href="artikel.html" title="Artikel">Artikel</a>
+					</li>
+					<li>
+						<a href="pemesanan.html" title="Cara Pemesanan">Cara Pemesanan</a>
+					</li>
+					<li>
+						<a href="pertanyaan.html" title="Pertanyaan">Pertanyaan</a>
+					</li>
+					<li>
+						<a href="kontak.html" title="Kontak Kami">Kontak Kami</a>
+					</li>
+				</ul>
+				<!-- End Menu -->
+			
+				<!-- Start Media Sosial -->
+				<h4>Media Sosial</h4>
+				<ul>
+					<li>
+						<a href="https://www.facebook.com/bedmassageportable" title="Facebook - sigmabed">
+							<img src="image/logo facebook.png" alt="logo facebook" width="30">Facebook - sigmabed
+						</a>
+					</li>
+						<a href="https://www.instagram.com/sigmabed" title="Instagram - sigmabed">
+							<img src="image/logo instagram.png" alt="logo instagram" width="30">Instagram - sigmabed
+						</a>
+					<li>
+					</li>
+				</ul>
+				<!-- End Media Sosial -->
+			</div>
+		</div>
+		<!-- End Menu Sekunder -->
+
+		<!-- Start Copyright -->		
+		<div class="container">
+			<p>Copyright@ 2019 - Sigma Bed</p>
+		</div>
+		<!-- End Copyright -->
+	</body>
+</html>
