--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<a href="artikel.html" title="Artikel">Artikel</a>
 				</li>
 				<li>
-					<a href="pemesanan.html" title="Cara Pemesanan">Cara Pemesanan</a>
+					<a href="pemesanan.html" title="Pemesanan">Pemesanan</a>
 				</li>
 				<li>
 					<a href="pertanyaan.html" title="Pertanyaan">Pertanyaan</a>
@@ -118,7 +118,7 @@
 					<h4>Testimonial</h4>
 				</div>
 				<div class="box-isi">
-					<blockquote>
+					<blockquote class="testimonial">
 						<p>
 							<em> Just to let you know I LOVE my massage table and it is used EVERYDAY. Thank you for making a good,solid and strong product!!!</em>
 						</p>
@@ -131,65 +131,88 @@
 		<!-- End Artikel dan Testimoni -->
 		
 		<!-- Start Menu Sekunder -->
-		<div class="container-full bg-blue">
-			<div class="container bg-red">
+		<div class="container-full bg-red menu-sekunder">	
+			<div class="container bg-blue">
 				<!-- Start Sigma Bed Massage -->
-				<h4>Sigma Bed Massage</h4>
-				<p>Bed Massage Portable Praktis dan Kokoh</p>
-				<p>Email :<a href="mailto:arijani67@gmail.com" title="arijani67@gmail.com">arijani67@gmail.com</a></p>
-				<p>WA :<a href="+62 812 394 9617" title="+62 812 394 9617">+62 812 394 9617</a></p>
+				<div class="menu-sekunder-one">
+					<h4>SIGMA BED MASSAGE</h4>
+					<p>Bed Massage Portable Praktis dan Kokoh</p>
+					<p>Email :<a href="mailto:arijani67@gmail.com" title="arijani67@gmail.com">arijani67@gmail.com</a></p>
+					<p>WA :<a href="+62 812 394 9617" title="+62 812 394 9617">+62 812 394 9617</a></p>
+				</div>
 				<!-- End Sigma Bed Massage -->
 
+			
 				<!-- Start Menu -->
-				<h4>Menu</h4>
-				<ul>
-					<li>
-						<a href="index.html" title="Beranda">Beranda</a>
-					</li>	
-					<li>
-						<a href="tentang.html" title="Tentang Kami">Tentang Kami</a>
-					</li>
-					<li>
-						<a href="produk.html" title="Produk">Produk</a>
-					</li>
-					<li>
-						<a href="artikel.html" title="Artikel">Artikel</a>
-					</li>
-					<li>
-						<a href="pemesanan.html" title="Cara Pemesanan">Cara Pemesanan</a>
-					</li>
-					<li>
-						<a href="pertanyaan.html" title="Pertanyaan">Pertanyaan</a>
-					</li>
-					<li>
-						<a href="kontak.html" title="Kontak Kami">Kontak Kami</a>
-					</li>
-				</ul>
+				<div class="menu-sekunder-two">
+					<h4>MENU</h4>
+					<ul>
+						<li>
+							<a href="index.html" title="Beranda">Beranda</a>
+						</li>	
+						<li>
+							<a href="tentang.html" title="Tentang Kami">Tentang Kami</a>
+						</li>
+						<li>
+							<a href="produk.html" title="Produk">Produk</a>
+						</li>
+						<li>
+							<a href="artikel.html" title="Artikel">Artikel</a>
+						</li>
+						<li>
+							<a href="pemesanan.html" title="Cara Pemesanan">Cara Pemesanan</a>
+						</li>
+						<li>
+							<a href="pertanyaan.html" title="Pertanyaan">Pertanyaan</a>
+						</li>
+						<li>
+							<a href="kontak.html" title="Kontak Kami">Kontak Kami</a>
+						</li>
+					</ul>
+				</div>
 				<!-- End Menu -->
 			
 				<!-- Start Media Sosial -->
-				<h4>Media Sosial</h4>
-				<ul>
-					<li>
-						<a href="https://www.facebook.com/bedmassageportable" title="Facebook - sigmabed">
-							<img src="image/logo facebook.png" alt="logo facebook" width="30">Facebook - sigmabed
-						</a>
-					</li>
-						<a href="https://www.instagram.com/sigmabed" title="Instagram - sigmabed">
-							<img src="image/logo instagram.png" alt="logo instagram" width="30">Instagram - sigmabed
-						</a>
-					<li>
-					</li>
-				</ul>
+				<div class="menu-sekunder-three">
+					<h4>MEDIA SOSIAL</h4>
+					<ul>
+						<li>
+							<a href="https://www.facebook.com/bedmassageportable" title="Facebook - sigmabed">
+								<img src="image/logo facebook.png" alt="logo facebook" width="30">Facebook - sigmabed
+							</a>
+						</li>
+						<li>
+							<a href="https://www.instagram.com/sigmabed" title="Instagram - sigmabed">
+								<img src="image/logo instagram.png" alt="logo instagram" width="30">Instagram - sigmabed
+							</a>
+						</li>
+					</ul>
+				</div>
 				<!-- End Media Sosial -->
 			</div>
 		</div>
 		<!-- End Menu Sekunder -->
 
 		<!-- Start Copyright -->		
-		<div class="container">
+		<div class="container Copyright">
 			<p>Copyright@ 2019 - Sigma Bed</p>
 		</div>
 		<!-- End Copyright -->
+
+		<!-- WhatsHelp.io widget -->
+<script type="text/javascript">
+    (function () {
+        var options = {
+            whatsapp: "+628123949617", // WhatsApp number
+            call_to_action: "Message us", // Call to action
+            position: "right", // Position may be 'right' or 'left'
+        };
+        var proto = document.location.protocol, host = "getbutton.io", url = proto + "//static." + host;
+        var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = url + '/widget-send-button/js/init.js';
+        s.onload = function () { WhWidgetSendButton.init(host, proto, options); };
+        var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
+    })();
+</script>
+<!-- /WhatsHelp.io widget -->
 	</body>
 </html>
