--- a/artikel.html
+++ b/artikel.html
@@ -12,91 +12,192 @@
 		<!-- Start Description -->
 		<meta name="description" content=" Bed Massage Portable Praktis dan Kokoh.Bed Massage Lipat. Cocok untuk home massage dan home terapis.">
 		<!-- End Description -->
+
+		<!-- Start CSS -->
+		<link rel="stylesheet" href="styles/style.css">
+		<!-- End CSS -->
+
 	</head>
 	<body>
 		<!-- Start Logo -->
-		<a href="index.html" title="Bed Massage Portable">
-			<img src="image/Logo bed massage2.jpg" alt="logo bed massage" width="100">
-		</a>	
+		<div class="container bg-blue logo">
+			<a href="index.html" title="Bed Massage Portable">
+				<img src="image/Logo bed massage2.jpg" alt="logo bed massage" width="150">
+			</a>
+		</div>	
 		<!-- End Logo -->
 
 		<!-- Start Menu Primer -->
-		<ul>
-			<li>
-				<a href="index.html" title="Beranda">Beranda</a>
-			</li>	
-			<li>
-				<a href="tentang.html" title="Tentang Kami">Tentang Kami</a>
-			</li>
-			<li>
-				<a href="produk.html" title="Produk">Produk</a>
-			</li>
-			<li>
-				<a href="artikel.html" title="Artikel">Artikel</a>
-			</li>
-			<li>
-				<a href="pemesanan.html" title="Cara Pemesanan">Cara Pemesanan</a>
-			</li>
-			<li>
-				<a href="pertanyaan.html" title="Pertanyaan">Pertanyaan</a>
-			</li>
-			<li>
-				<a href="kontak.html" title="Kontak Kami">Kontak Kami</a>
-			</li>
-		</ul>
+		<div class="container bg-red menu-primer">
+			<ul>
+				<li>
+					<a href="index.html" title="Beranda">Beranda</a>
+				</li>	
+				<li>
+					<a href="tentang.html" title="Tentang Kami">Tentang Kami</a>
+				</li>
+				<li>
+					<a href="produk.html" title="Produk">Produk</a>
+				</li>
+				<li>
+					<a href="artikel.html" title="Artikel" class="active">Artikel</a>
+				</li>
+				<li>
+					<a href="pemesanan.html" title="Pemesanan">Pemesanan</a>
+				</li>
+				<li>
+					<a href="pertanyaan.html" title="Pertanyaan">Pertanyaan</a>
+				</li>
+				<li>
+					<a href="kontak.html" title="Kontak Kami">Kontak Kami</a>
+				</li>
+			</ul>
+		</div>
 		<!-- End Menu Primer -->
 
 		<!-- Start Jumbotron -->
-		<h1>Artikel di Sigma Bed Massage</h1>
-		<h3>Bed Massage Portable Praktis dan Kokoh</h3>
+		<div class="container jumbotron">
+			<h1>Artikel di Sigma Bed Massage</h1>
+			<h3>Bed Massage Portable Praktis dan Kokoh</h3>
+		</div>
 		<!-- End Jumbotron -->
 
-		<!-- Start Menu Sekunder -->
-		<h4>Sigma Bed Massage</h4>
-		<p>Bed Massage Portable Praktis dan Kokoh</p>
-		<p>Email :<a href="mailto:arijani67@gmail.com" title="arijani67@gmail.com">arijani67@gmail.com</a></p>
-		<p>WA :<a href="+62 812 394 9617" title="+62 812 394 9617">+62 812 394 9617</a></p>
+		<!-- Start Artikel -->
+		<div class="container">
+			<div class="main-one">
+				<div class="box-heading">
+					<h4>
+						<a href="index.html" title="Beranda">Beranda</a>
+					> Artikel
+					</h4>
+				</div>
+
+				<div class="box-isi">
+					<h2>
+						<a href="" title="Manfaat Pijat bagi Kesehatan">Manfaat Pijat bagi Kesehatan</a>
+					</h2>
+					<p>1. Meningkatkan sirkulasi darah.</p>
+					<p>2. Mengurangi stress.</p>
+					<p>3. Meningkatkan imunitas.</p>
+					<p>
+						<a href="" title="Baca selengkapnya >>">Baca selengkapnya >></a>
+					</p>
+
+					<hr>
+
+					<h2>
+						<a href="" title="Manfaat Kerokan">Manfaat Kerokan</a>		
+					</h2>
+					<p> Sebagai orang Indonesia,kalau badan merasa kurang sehat atau masuk angin,langsung teringat untuk 'kerokan'.
+					Dunia medis mencoba meneliti manfaat kerokan untuk meringankan gejala sakit/tidak enak badan.</p>
+					<p>
+						<a href="" title="Baca selengkapnya >>">Baca selengkapnya >></a>
+					</p>
+				</div>
+			</div>
+
+			<div class="sidebar-two">
+				<!-- Start Kategori -->
+				<div class="box-heading">
+					<h4>Kategori</h4>
+				</div>
+				<div class="box-isi">
+					<ul>
+						<li>
+							<a href="#" title="Berita">Berita</a>
+						</li>
+						<li>
+							<a href="#" title="Tips">Tips</a>
+						</li>
+					</ul>
+				</div>
+	    		<!-- End Kategori -->
+			</div>	
+		</div>
+		<!-- End Artikel -->
 
 		<!-- Start Menu Sekunder -->
-		<h4>Menu</h4>
-		<ul>
-			<li>
-				<a href="index.html" title="Beranda">Beranda</a>
-			</li>	
-			<li>
-				<a href="tentang.html" title="Tentang Kami">Tentang Kami</a>
-			</li>
-			<li>
-				<a href="produk.html" title="Produk">Produk</a>
-			</li>
-			<li>
-				<a href="artikel.html" title="Artikel">Artikel</a>
-			</li>
-			<li>
-				<a href="pemesanan.html" title="Cara Pemesanan">Cara Pemesanan</a>
-			</li>
-			<li>
-				<a href="pertanyaan.html" title="Pertanyaan">Pertanyaan</a>
-			</li>
-			<li>
-				<a href="kontak.html" title="Kontak Kami">Kontak Kami</a>
-			</li>
-		</ul>
+		<div class="container-full bg-red menu-sekunder">	
+			<div class="container bg-blue">
+				<!-- Start Sigma Bed Massage -->
+				<div class="menu-sekunder-one">
+					<h4>SIGMA BED MASSAGE</h4>
+					<p>Bed Massage Portable Praktis dan Kokoh</p>
+					<p>Email :<a href="mailto:arijani67@gmail.com" title="arijani67@gmail.com">arijani67@gmail.com</a></p>
+					<p>WA :<a href="+62 812 394 9617" title="+62 812 394 9617">+62 812 394 9617</a></p>
+				</div>
+				<!-- End Sigma Bed Massage -->
 
-		<h4>Media Sosial</h4>
-		<ul>
-			<li>
-				<a href="https://www.facebook.com/bedmassageportable" title="Facebook - sigmabed">
-					<img src="image/logo facebook.png" alt="logo facebook" width="30">
-				</a>
-			</li>
-				<a href="https://www.instagram.com/sigmabed" title="Instagram - sigmabed">
-					<img src="image/logo instagram.png" alt="logo instagram" width="30">
-				</a>
-			<li>
-			</li>
-		</ul>
+			
+				<!-- Start Menu -->
+				<div class="menu-sekunder-two">
+					<h4>MENU</h4>
+					<ul>
+						<li>
+							<a href="index.html" title="Beranda">Beranda</a>
+						</li>	
+						<li>
+							<a href="tentang.html" title="Tentang Kami">Tentang Kami</a>
+						</li>
+						<li>
+							<a href="produk.html" title="Produk">Produk</a>
+						</li>
+						<li>
+							<a href="artikel.html" title="Artikel">Artikel</a>
+						</li>
+						<li>
+							<a href="pemesanan.html" title="Cara Pemesanan">Cara Pemesanan</a>
+						</li>
+						<li>
+							<a href="pertanyaan.html" title="Pertanyaan">Pertanyaan</a>
+						</li>
+						<li>
+							<a href="kontak.html" title="Kontak Kami">Kontak Kami</a>
+						</li>
+					</ul>
+				</div>
+				<!-- End Menu -->
+			
+				<!-- Start Media Sosial -->
+				<div class="menu-sekunder-three">
+					<h4>MEDIA SOSIAL</h4>
+					<ul>
+						<li>
+							<a href="https://www.facebook.com/bedmassageportable" title="Facebook - sigmabed">
+								<img src="image/logo facebook.png" alt="logo facebook" width="30">Facebook - sigmabed
+							</a>
+						</li>
+						<li>
+							<a href="https://www.instagram.com/sigmabed" title="Instagram - sigmabed">
+								<img src="image/logo instagram.png" alt="logo instagram" width="30">Instagram - sigmabed
+							</a>
+						</li>
+					</ul>
+				</div>
+				<!-- End Media Sosial -->
+			</div>
+		</div>
 		<!-- End Menu Sekunder -->
 
+		<!-- Start Copyright -->		
+		<div class="container Copyright">
+			<p>Copyright@ 2019 - Sigma Bed</p>
+		</div>
+		<!-- End Copyright -->
+
+		<!-- WhatsHelp.io widget -->
+<script type="text/javascript">
+    (function () {
+        var options = {
+            whatsapp: "+628123949617", // WhatsApp number
+            call_to_action: "Message us", // Call to action
+            position: "right", // Position may be 'right' or 'left'
+        };
+        var proto = document.location.protocol, host = "getbutton.io", url = proto + "//static." + host;
+        var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = url + '/widget-send-button/js/init.js';
+        s.onload = function () { WhWidgetSendButton.init(host, proto, options); };
+        var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
+    })();
+</script>
 	</body>
 </html>
