--- a/artikel.html
+++ b/artikel.html
@@ -22,7 +22,7 @@
 		<!-- Start Logo -->
 		<div class="container bg-blue logo">
 			<a href="index.html" title="Bed Massage Portable">
-				<img src="image/Logo bed massage2.jpg" alt="logo bed massage" width="150">
+				<img src="image/logo-bedmassage2.jpg" alt="logo bed massage" width="150">
 			</a>
 		</div>	
 		<!-- End Logo -->
@@ -164,12 +164,12 @@
 					<ul>
 						<li>
 							<a href="https://www.facebook.com/bedmassageportable" title="Facebook - sigmabed">
-								<img src="image/logo facebook.png" alt="logo facebook" width="30">Facebook - sigmabed
+								<img src="image/logo-facebook.png" alt="logo facebook" width="30">Facebook - sigmabed
 							</a>
 						</li>
 						<li>
 							<a href="https://www.instagram.com/sigmabed" title="Instagram - sigmabed">
-								<img src="image/logo instagram.png" alt="logo instagram" width="30">Instagram - sigmabed
+								<img src="image/logo-instagram.png" alt="logo instagram" width="30">Instagram - sigmabed
 							</a>
 						</li>
 					</ul>
