--- a/tentang.html
+++ b/tentang.html
@@ -22,7 +22,7 @@
 		<!-- Start Logo -->
 		<div class="container bg-blue logo">
 			<a href="index.html" title="Bed Massage Portable">
-				<img src="image/Logo bed massage2.jpg" alt="logo bed massage" width="150">
+				<img src="image/logo-bedmassage2.jpg" alt="logo bed massage" width="150">
 			</a>
 		</div>	
 		<!-- End Logo -->
@@ -137,12 +137,12 @@
 					<ul>
 						<li>
 							<a href="https://www.facebook.com/bedmassageportable" title="Facebook - sigmabed">
-								<img src="image/logo facebook.png" alt="logo facebook" width="30">Facebook - sigmabed
+								<img src="image/logo-facebook.png" alt="logo facebook" width="30">Facebook - sigmabed
 							</a>
 						</li>
 						<li>
 							<a href="https://www.instagram.com/sigmabed" title="Instagram - sigmabed">
-								<img src="image/logo instagram.png" alt="logo instagram" width="30">Instagram - sigmabed
+								<img src="image/logo-instagram.png" alt="logo instagram" width="30">Instagram - sigmabed
 							</a>
 						</li>
 					</ul>
@@ -157,5 +157,19 @@
 			<p>Copyright@ 2019 - Sigma Bed</p>
 		</div>
 		<!-- End Copyright -->
+		<!-- WhatsHelp.io widget -->
+<script type="text/javascript">
+    (function () {
+        var options = {
+            whatsapp: "+628123949617", // WhatsApp number
+            call_to_action: "Message us", // Call to action
+            position: "right", // Position may be 'right' or 'left'
+        };
+        var proto = document.location.protocol, host = "getbutton.io", url = proto + "//static." + host;
+        var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = url + '/widget-send-button/js/init.js';
+        s.onload = function () { WhWidgetSendButton.init(host, proto, options); };
+        var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
+    })();
+</script>
 	</body>
 </html>
