--- a/artikel-manfaat-kerokan.html
+++ b/artikel-manfaat-kerokan.html
@@ -74,25 +74,22 @@
 
 				<div class="box-isi">
 					<h2>
-						<a href="" title="Manfaat Pijat bagi Kesehatan">Manfaat Pijat bagi Kesehatan</a>
+						<a href="" title="Manfaat Kerokan">Manfaat Kerokan</a>
 					</h2>
-					<p>1. Meningkatkan sirkulasi darah.</p>
-					<p>2. Mengurangi stress.</p>
-					<p>3. Meningkatkan imunitas.</p>
-					<p>
-						<a href="artikel-manfaat-pijat.html" title="Baca selengkapnya >>">Baca selengkapnya >></a>
-					</p>
-
-					<hr>
-
-					<h2>
-						<a href="" title="Manfaat Kerokan">Manfaat Kerokan</a>		
-					</h2>
-					<p> Sebagai orang Indonesia,kalau badan merasa kurang sehat atau masuk angin,langsung teringat untuk 'kerokan'.
+						<a href="artikel-manfaat-kerokan.html" title="Foto Manfaat Kerokan">
+							<img src="image/foto-manfaatkerokan.jpg" alt="Foto manfaat kerokan" width="150">
+						</a>
+					<p>Sebagai orang Indonesia,kalau badan merasa kurang sehat atau masuk angin,langsung teringat untuk 'kerokan'.
 					Dunia medis mencoba meneliti manfaat kerokan untuk meringankan gejala sakit/tidak enak badan.</p>
-					<p>
-						<a href="artikel-manfaat-kerokan.html" title="Baca selengkapnya >>">Baca selengkapnya >></a>
-					</p>
+					<p>Secara medis, kerokan masih dianggap mitos.</p>
+					<p>Beberapa penelitian manfaat kerokan menemukan hal-hal berikut:</p>
+					<p>1. Meningkatkan temperatur dan energi dalam tubuh. Kerokan memiliki prinsip pemanasan seperti penggunaan moxa pada jarum accupuncture.</p>
+					<p>2. Merangsang titik-titik meridian. Kerokan merangsang kulit tubuh bagian luar, membuat saraf penerima mengirimkan signal ke otak untuk menimbulkan efek menyembuhkan sendiri (self healing) sesuai titik-titik meridian tubuh.</p>
+					<p>3. Mengembangkan pembuluh darah yang semula menguncup akibat terpapar dingin atau kurang gerak. Sehingga darah kembali mengalir deras dan lancar.</p>
+					<p>4. Meningkatkan mekanisme pertahanan tubuh terhadap serangan virus. Penambahan arus darah ke permukaan kulit meningkatkan mekanisme imun tubuh.</p>
+					<p>5. Kerokan biasa dilakukan dengan bantuan koin dan minyak urut,balsem, minyak jahe dll yang memberi efek menghangatkan.</p>
+					<p>Setelah kerokan, biasa terjadi perubahan warna kulit dari kemerahan menjadi kebiruan bahkan hitam. Perubahan warna kulit menunjukkan tingkatan rasa sakit. Makin tua warna kulit makin berat gangguan penyakitnya.</p>
+					<p>So, enjoy kerokan biar bablas angine. Pengobatan tradisional yang ternyata banyak manfaatnya.</p>
 				</div>
 			</div>
 
@@ -186,7 +183,7 @@
 		<!-- End Copyright -->
 
 		<!-- WhatsHelp.io widget -->
-<script type="text/javascript">
+	<script type="text/javascript">
     (function () {
         var options = {
             whatsapp: "+628123949617", // WhatsApp number
@@ -198,6 +195,8 @@
         s.onload = function () { WhWidgetSendButton.init(host, proto, options); };
         var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
     })();
-</script>
+	</script>
 	</body>
 </html>
+
+
