--- a/artikel-manfaat-pijat.html
+++ b/artikel-manfaat-pijat.html
@@ -76,23 +76,18 @@
 					<h2>
 						<a href="" title="Manfaat Pijat bagi Kesehatan">Manfaat Pijat bagi Kesehatan</a>
 					</h2>
-					<p>1. Meningkatkan sirkulasi darah.</p>
-					<p>2. Mengurangi stress.</p>
-					<p>3. Meningkatkan imunitas.</p>
-					<p>
-						<a href="artikel-manfaat-pijat.html" title="Baca selengkapnya >>">Baca selengkapnya >></a>
-					</p>
-
-					<hr>
-
-					<h2>
-						<a href="" title="Manfaat Kerokan">Manfaat Kerokan</a>		
-					</h2>
-					<p> Sebagai orang Indonesia,kalau badan merasa kurang sehat atau masuk angin,langsung teringat untuk 'kerokan'.
-					Dunia medis mencoba meneliti manfaat kerokan untuk meringankan gejala sakit/tidak enak badan.</p>
-					<p>
-						<a href="artikel-manfaat-kerokan.html" title="Baca selengkapnya >>">Baca selengkapnya >></a>
-					</p>
+						<a href="artikel-manfaatpijat.html" title="Foto Manfaat Pijat">
+							<img src="image/foto-manfaatpijat.jpg" alt="Foto manfaat pijat" width="150">
+						</a>
+						<p>Pijat ternyata banyak manfaatnya bagi kesehatan antara lain :</p>
+						<p>1. Meningkatkan sirkulasi darah.</p>
+						<p>2. Mengurangi stress.</p>
+						<p>3. Meningkatkan imunitas.</p>
+						<p>4. Mengatur tekanan darah.</p>
+						<p>5. Mengurangi rasa sakit.</p>
+						<p>6. Mengurangi kecemasan dan stress.</p>
+						<p>7. Membantu pasien arthritis.</p>
+						<p>8. Mengurangi efek samping dari pengobatan kanker.</p>
 				</div>
 			</div>
 
@@ -186,7 +181,7 @@
 		<!-- End Copyright -->
 
 		<!-- WhatsHelp.io widget -->
-<script type="text/javascript">
+	<script type="text/javascript">
     (function () {
         var options = {
             whatsapp: "+628123949617", // WhatsApp number
@@ -198,6 +193,7 @@
         s.onload = function () { WhWidgetSendButton.init(host, proto, options); };
         var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
     })();
-</script>
+	</script>
 	</body>
 </html>
+
