--- a/kategori-berita.html
+++ b/kategori-berita.html
@@ -64,66 +64,38 @@
 
 		<!-- Start Artikel -->
 		<div class="container">
-			<div class="main-one">
-				<div class="box-heading">
-					<h4>
-						<a href="index.html" title="Beranda">Beranda</a>
+			<div class="box-heading">
+				<h4>
+					<a href="index.html" title="Beranda">Beranda</a>
 					> Artikel
-					</h4>
-				</div>
+				</h4>
+			</div>
 
-				<div class="box-isi">
-					<h2>
-						<a href="" title="Manfaat Pijat bagi Kesehatan">Manfaat Pijat bagi Kesehatan</a>
-					</h2>
-					<p>1. Meningkatkan sirkulasi darah.</p>
-					<p>2. Mengurangi stress.</p>
-					<p>3. Meningkatkan imunitas.</p>
-					<p>
-						<a href="artikel-manfaat-pijat.html" title="Baca selengkapnya >>">Baca selengkapnya >></a>
-					</p>
-
-					<hr>
-
-					<h2>
-						<a href="" title="Manfaat Kerokan">Manfaat Kerokan</a>		
-					</h2>
-					<p> Sebagai orang Indonesia,kalau badan merasa kurang sehat atau masuk angin,langsung teringat untuk 'kerokan'.
-					Dunia medis mencoba meneliti manfaat kerokan untuk meringankan gejala sakit/tidak enak badan.</p>
-					<p>
-						<a href="artikel-manfaat-kerokan.html" title="Baca selengkapnya >>">Baca selengkapnya >></a>
-					</p>
-
-					<hr>
-
+			<!-- Start Kategori -->
+			<div class="box-isi">
+				<h4>
+					<a href="kategori-berita.html" title="Kategori Berita">Kategori</a>
+					>Berita	
+				</h4>
 					<h2>
 						<a href="" title="10 Tahun Keliling Dunia Tularkan Ilmu Pijat">10 Tahun Keliling Dunia Tularkan Ilmu Pijat</a>
 					</h2>
+						<a href="artikel-berita-ilmupijat.html" title="Foto Berita Ilmu Pijat ">
+							<img src="image/foto-berita-ilmupijat.jpg" alt="Foto Berita Ilmu Pijat" width="300">
+						</a>
 					<p>Surya Online, Batu. Master Ta Long asal Thailand, sudah hampir 10 tahun ini keliling ke berbagai belahan bumi. Ta Long yang juga biksu ini memiliki tujuan menularkan ilmu pijat kepada siapapun, tanpa membedakan suku, ras dan agama.</p>
-					<p>
-						<a href="artikel-berita-ilmupijat.html" title="Baca selengkapnya >>">Baca selengkapnya >></a>
-					</p>
-
-				</div>
+					<p>Kali ini Master Ta Long bersama 25 muridnya dari Malang dan Batu melakukan bakti sosial di Balai Kota Batu, Senin (21/4/2014). Mereka mempraktekkan teknik pemijatan ala Kungfu Shaolin, kepada PNS, termasuk Wakil Walikota Punjul Santoso, Sekkota Widodo, serta istri walikota Dewanti Rumpoko.</p>
+					<p>Ilmu pemijatan yang dilakukan Ta Long lebih banyak membenahi tulang belakang. Sebab di tulang belakang itulah, terkumpul syaraf tubuh. Beberapa teknik pemijatan yang diperagakan, seperti tarik kepala.</p>
+					<p>Pada saat kepala ditarik menggunakan selendang, ada salah seorang murid Ta Long yang memegangi kaki orang yang dipijat. Pada saat itu, terdengar suara keretek dari tubuh. Ta Long juga menggunakan teknik ikan duyung dengan memiringkan badan orang yang dipijat, lalu ditekan.</p>
+					<p>"Teknik pemijatan ini lebih sebenarnya lebih banyak memperbaiki tulang punggung. Suhu Ta Long sebelum memijat, bisa mengetahui keluhan dari pasien dengan hanya menempelkan tangannya ke tulang punggung. Setelah itu,baru Suhu melakukan pemijatan berdasarkan keluhan itu," terang Shefu Shao Zheng, murid yang juga menerjemahkan perkataan Ta long.</p>
+					<p>Shefu Shao Zheng mengungkapkan, pertama kali datang ke Indonesia pada tahun 2009 lalu, ia langsung mendatangi kota Semarang. Di rumah salah satu penduduk, ia mengajarkan ilmu pijat yang diberi nama Tairopractic. Di sana murid yang belajar kepadanya sebagian dari m
+					uslim dan Katholik, justru tidak ada murid beragama Budha seperti yang dianutnya.</p>
+					<p>Tairopractic merupakan gabungan ilmu pijat dari Thailand, Tiongkok, Ameika Serikat (Chiropractic), Taiwan, Burma dan Jepang.</p>
+					<p>Ta Long sudah keliling ke beberapa negara untuk mengajarkan teknik ini. Antara lain ke Singapura, Malaysia, Taiwan Hongkong dan Indonesia. Di Indonesia hingga saat ini sudah memiliki 800 murid yang tersebar di Jawa,Bali, Sumatera, Kalimantan dan Sulawesi.</p>
+					<p>Sumber :https://surabaya.tribunnews.com/2014/04/21/10-tahun-keliling-dunia-tularkan-ilmu-pijat</p>			
+				</div>		
 			</div>
-
-			<div class="sidebar-two">
-				<!-- Start Kategori -->
-				<div class="box-heading">
-					<h4>Kategori</h4>
-				</div>
-				<div class="box-isi">
-					<ul>
-						<li>
-							<a href="kategori-berita.html" title="Berita">Berita</a>
-						</li>
-						<li>
-							<a href="kategori-tips.html" title="Tips">Tips</a>
-						</li>
-					</ul>
-				</div>
-	    		<!-- End Kategori -->
-			</div>	
+	    	<!-- End Kategori -->
 		</div>
 		<!-- End Artikel -->
 
@@ -196,7 +168,7 @@
 		</div>
 		<!-- End Copyright -->
 
-		<!-- WhatsHelp.io widget -->
+<!-- WhatsHelp.io widget -->
 <script type="text/javascript">
     (function () {
         var options = {
@@ -212,3 +184,8 @@
 </script>
 	</body>
 </html>
+
+</script>
+	</body>
+</html>
+
