--- a/kategori-tips.html
+++ b/kategori-tips.html
@@ -64,66 +64,54 @@
 
 		<!-- Start Artikel -->
 		<div class="container">
-			<div class="main-one">
-				<div class="box-heading">
-					<h4>
-						<a href="index.html" title="Beranda">Beranda</a>
+			<div class="box-heading">
+				<h4>
+					<a href="index.html" title="Beranda">Beranda</a>
 					> Artikel
-					</h4>
-				</div>
+				</h4>
+			</div>
 
-				<div class="box-isi">
+			<!-- Start Kategori -->
+			<div class="box-isi">
+				<h4>
+					<a href="kategori-tips.html" title="Kategori Tips">Kategori</a>
+					>Tips
+				</h4>
 					<h2>
 						<a href="" title="Manfaat Pijat bagi Kesehatan">Manfaat Pijat bagi Kesehatan</a>
 					</h2>
-					<p>1. Meningkatkan sirkulasi darah.</p>
-					<p>2. Mengurangi stress.</p>
-					<p>3. Meningkatkan imunitas.</p>
-					<p>
-						<a href="artikel-manfaat-pijat.html" title="Baca selengkapnya >>">Baca selengkapnya >></a>
-					</p>
-
-					<hr>
-
+						<a href="artikel-manfaatpijat.html" title="Foto Manfaat Pijat">
+							<img src="image/foto-manfaatpijat.jpg" alt="Foto manfaat pijat" width="150">
+						</a>
+						<p>Pijat ternyata banyak manfaatnya bagi kesehatan antara lain :</p>
+						<p>1. Meningkatkan sirkulasi darah.</p>
+						<p>2. Mengurangi stress.</p>
+						<p>3. Meningkatkan imunitas.</p>
+						<p>4. Mengatur tekanan darah.</p>
+						<p>5. Mengurangi rasa sakit.</p>
+						<p>6. Mengurangi kecemasan dan stress.</p>
+						<p>7. Membantu pasien arthritis.</p>
+						<p>8. Mengurangi efek samping dari pengobatan kanker.</p>
 					<h2>
-						<a href="" title="Manfaat Kerokan">Manfaat Kerokan</a>		
+						<a href="" title="Manfaat Kerokan">Manfaat Kerokan</a>
 					</h2>
-					<p> Sebagai orang Indonesia,kalau badan merasa kurang sehat atau masuk angin,langsung teringat untuk 'kerokan'.
+						<a href="artikel-manfaat-kerokan.html" title="Foto Manfaat Kerokan">
+							<img src="image/foto-manfaatkerokan.jpg" alt="Foto manfaat kerokan" width="150">
+						</a>
+					<p>Sebagai orang Indonesia,kalau badan merasa kurang sehat atau masuk angin,langsung teringat untuk 'kerokan'.
 					Dunia medis mencoba meneliti manfaat kerokan untuk meringankan gejala sakit/tidak enak badan.</p>
-					<p>
-						<a href="artikel-manfaat-kerokan.html" title="Baca selengkapnya >>">Baca selengkapnya >></a>
-					</p>
-
-					<hr>
-
-					<h2>
-						<a href="" title="10 Tahun Keliling Dunia Tularkan Ilmu Pijat">10 Tahun Keliling Dunia Tularkan Ilmu Pijat</a>
-					</h2>
-					<p>Surya Online, Batu. Master Ta Long asal Thailand, sudah hampir 10 tahun ini keliling ke berbagai belahan bumi. Ta Long yang juga biksu ini memiliki tujuan menularkan ilmu pijat kepada siapapun, tanpa membedakan suku, ras dan agama.</p>
-					<p>
-						<a href="artikel-berita-ilmupijat.html" title="Baca selengkapnya >>">Baca selengkapnya >></a>
-					</p>
-
-				</div>
+					<p>Secara medis, kerokan masih dianggap mitos.</p>
+					<p>Beberapa penelitian manfaat kerokan menemukan hal-hal berikut:</p>
+					<p>1. Meningkatkan temperatur dan energi dalam tubuh. Kerokan memiliki prinsip pemanasan seperti penggunaan moxa pada jarum accupuncture.</p>
+					<p>2. Merangsang titik-titik meridian. Kerokan merangsang kulit tubuh bagian luar, membuat saraf penerima mengirimkan signal ke otak untuk menimbulkan efek menyembuhkan sendiri (self healing) sesuai titik-titik meridian tubuh.</p>
+					<p>3. Mengembangkan pembuluh darah yang semula menguncup akibat terpapar dingin atau kurang gerak. Sehingga darah kembali mengalir deras dan lancar.</p>
+					<p>4. Meningkatkan mekanisme pertahanan tubuh terhadap serangan virus. Penambahan arus darah ke permukaan kulit meningkatkan mekanisme imun tubuh.</p>
+					<p>5. Kerokan biasa dilakukan dengan bantuan koin dan minyak urut,balsem, minyak jahe dll yang memberi efek menghangatkan.</p>
+					<p>Setelah kerokan, biasa terjadi perubahan warna kulit dari kemerahan menjadi kebiruan bahkan hitam. Perubahan warna kulit menunjukkan tingkatan rasa sakit. Makin tua warna kulit makin berat gangguan penyakitnya.</p>
+					<p>So, enjoy kerokan biar bablas angine. Pengobatan tradisional yang ternyata banyak manfaatnya.</p>			
+				</div>		
 			</div>
-
-			<div class="sidebar-two">
-				<!-- Start Kategori -->
-				<div class="box-heading">
-					<h4>Kategori</h4>
-				</div>
-				<div class="box-isi">
-					<ul>
-						<li>
-							<a href="kategori-berita.html" title="Berita">Berita</a>
-						</li>
-						<li>
-							<a href="kategori-tips.html" title="Tips">Tips</a>
-						</li>
-					</ul>
-				</div>
-	    		<!-- End Kategori -->
-			</div>	
+	    	<!-- End Kategori -->
 		</div>
 		<!-- End Artikel -->
 
@@ -196,7 +184,7 @@
 		</div>
 		<!-- End Copyright -->
 
-		<!-- WhatsHelp.io widget -->
+<!-- WhatsHelp.io widget -->
 <script type="text/javascript">
     (function () {
         var options = {
@@ -212,3 +200,8 @@
 </script>
 	</body>
 </html>
+
+</script>
+	</body>
+</html>
+
