--- a/artikel-berita-ilmupijat.html
+++ b/artikel-berita-ilmupijat.html
@@ -79,7 +79,7 @@
 						<a href="artikel-berita-ilmupijat.html" title="Foto Berita Ilmu Pijat ">
 							<img src="image/foto-berita-ilmupijat.jpg" alt="Foto Berita Ilmu Pijat" width="300">
 						</a>
-					<p>Surya Online, Batu. Master Ta Long asal Thailand, sudah hampir 10 tahun ini keliling ke berbagai belahan bumi. Ta Long yang juga biksu ini memiliki tujuan menularkan ilmu pijat kepada siapapun, tanpa membedakan suku, ras dan agama.</p>
+					<p><em>Surya Online, Batu.</em> Master Ta Long asal Thailand, sudah hampir 10 tahun ini keliling ke berbagai belahan bumi. Ta Long yang juga biksu ini memiliki tujuan menularkan ilmu pijat kepada siapapun, tanpa membedakan suku, ras dan agama.</p>
 					<p>Kali ini Master Ta Long bersama 25 muridnya dari Malang dan Batu melakukan bakti sosial di Balai Kota Batu, Senin (21/4/2014). Mereka mempraktekkan teknik pemijatan ala Kungfu Shaolin, kepada PNS, termasuk Wakil Walikota Punjul Santoso, Sekkota Widodo, serta istri walikota Dewanti Rumpoko.</p>
 					<p>Ilmu pemijatan yang dilakukan Ta Long lebih banyak membenahi tulang belakang. Sebab di tulang belakang itulah, terkumpul syaraf tubuh. Beberapa teknik pemijatan yang diperagakan, seperti tarik kepala.</p>
 					<p>Pada saat kepala ditarik menggunakan selendang, ada salah seorang murid Ta Long yang memegangi kaki orang yang dipijat. Pada saat itu, terdengar suara keretek dari tubuh. Ta Long juga menggunakan teknik ikan duyung dengan memiringkan badan orang yang dipijat, lalu ditekan.</p>
