--- a/artikel.html
+++ b/artikel.html
@@ -99,7 +99,7 @@
 					<h2>
 						<a href="" title="10 Tahun Keliling Dunia Tularkan Ilmu Pijat">10 Tahun Keliling Dunia Tularkan Ilmu Pijat</a>
 					</h2>
-					<p>Surya Online, Batu. Master Ta Long asal Thailand, sudah hampir 10 tahun ini keliling ke berbagai belahan bumi. Ta Long yang juga biksu ini memiliki tujuan menularkan ilmu pijat kepada siapapun, tanpa membedakan suku, ras dan agama.</p>
+					<p><em>Surya Online, Batu.</em> Master Ta Long asal Thailand, sudah hampir 10 tahun ini keliling ke berbagai belahan bumi. Ta Long yang juga biksu ini memiliki tujuan menularkan ilmu pijat kepada siapapun, tanpa membedakan suku, ras dan agama.</p>
 					<p>
 						<a href="artikel-berita-ilmupijat.html" title="Baca selengkapnya >>">Baca selengkapnya >></a>
 					</p>
