--- a/artikel-berita-ilmupijat.html
+++ b/artikel-berita-ilmupijat.html
@@ -49,6 +49,9 @@
 					<a href="pertanyaan.html" title="Pertanyaan">Pertanyaan</a>
 				</li>
 				<li>
+					<a href="galeri.html" title="Galeri">Galeri</a>
+				</li>
+				<li>
 					<a href="kontak.html" title="Kontak Kami">Kontak Kami</a>
 				</li>
 			</ul>
@@ -146,6 +149,9 @@
 						</li>
 						<li>
 							<a href="pertanyaan.html" title="Pertanyaan">Pertanyaan</a>
+						</li>
+						<li>
+							<a href="galeri.html" title="Galeri">Galeri</a>
 						</li>
 						<li>
 							<a href="kontak.html" title="Kontak Kami">Kontak Kami</a>
