--- a/index.html
+++ b/index.html
@@ -49,8 +49,11 @@
 					<a href="pertanyaan.html" title="Pertanyaan">Pertanyaan</a>
 				</li>
 				<li>
-					<a href="kontak.html" title="Kontak Kami">Kontak Kami</a>
+					<a href="galeri.html" title="Galeri">Galeri</a>
 				</li>
+				<li>
+					<a href="kontak.html" title="Kontak Kami">Kontak Kami</a>
+				</li>	
 			</ul>
 		</div>
 		<!-- End Menu Primer -->
@@ -164,6 +167,9 @@
 						</li>
 						<li>
 							<a href="pertanyaan.html" title="Pertanyaan">Pertanyaan</a>
+						</li>
+						<li>
+							<a href="galeri.html" title="Galeri">Galeri</a>
 						</li>
 						<li>
 							<a href="kontak.html" title="Kontak Kami">Kontak Kami</a>
