--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
 		<div class="container jumbotron">
 			<h1>Selamat Datang di Sigma Bed Massage</h1>
 			<h3>Bed Massage Portable Praktis dan Kokoh</h3>
+			<a href="produk.html" title="Bed Massage Portable">
+				<img src="image/bed-massage-1.jpg" alt="foto bed massage 1" width="400"></a>
 		</div>
 		<!-- End Jumbotron -->
 
